--- a/.github/workflows/apps-plugin-snapshot.yml
+++ b/.github/workflows/apps-plugin-snapshot.yml
@@ -10,8 +10,10 @@ jobs:
   build:
     if: ${{ github.repository == 'spring-cloud/stream-applications' }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: spring-cloud-dataflow-apps-plugin
     steps:
-
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
@@ -32,7 +34,6 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-m2-
-
       - name: Configure JFrog Cli
         run: |
           jfrog rt mvnc \
@@ -44,14 +45,12 @@ jobs:
             --repo-deploy-snapshots=libs-snapshot-local
           echo JFROG_CLI_BUILD_NAME=spring-cloud-dataflow-apps-plugin-main-snapshot >> $GITHUB_ENV
           echo JFROG_CLI_BUILD_NUMBER=$GITHUB_RUN_NUMBER >> $GITHUB_ENV
-
       - name: Build and Publish
         run: |
           jfrog rt build-clean
-          jfrog rt mvn -gs spring-cloud-dataflow-apps-plugin/settings.xml -Pfull,deploymentfiles -B install 
+          jfrog rt mvn -gs settings.xml -Pfull,deploymentfiles -B install 
           jfrog rt build-publish
           echo spring_cloud_dataflow_apps_plugin_version=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout) >> $GITHUB_ENV
-
       - name: Clean cache
         run: |
           find ~/.m2/repository -type d -name '*SNAPSHOT' | xargs rm -fr
